cmake_minimum_required (VERSION 3.15) 
project(vr-imgui)
include(ExternalProject)
include(GNUInstallDirs)
include(${CMAKE_SOURCE_DIR}/../macros.cmake)

message("${CMAKE_PROJECT_NAME} INSTALL_DIR_ABSOLUTE ${INSTALL_DIR_ABSOLUTE}")
message("VR-Imgui GLEW_LIBRARY  ${GLEW_LIBRARY}")
message("VR-Imgui GLEW_INCLUDE_DIR  ${CMAKE_INSTALL_PREFIX}/include")
message("VR-Imgui GLEW_SHARED_LIBRARY_DEBUG  ${GLEW_SHARED_LIBRARY_RELEASE}")
message("VR-Imgui ROOT_CMAKE_MODULE_PATH  ${ROOT_CMAKE_MODULE_PATH}")

list(APPEND CMAKE_MODULE_PATH  ${ROOT_CMAKE_MODULE_PATH} )


set(EXTERNAL_DIR_LOCATION ${CMAKE_BINARY_DIR})  
set(EXTERNAL_DIR_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/../install/)  

cmake_policy(SET CMP0072 NEW)
set(OpenGL_GL_PREFERENCE GLVND)
find_package(OpenGL REQUIRED)
build_git_subproject(
  NAME vr-imgui 
  URL https://github.com/brown-ccv/VR-imgui.git
  TAG v2.0.1
  BUILD_ARGS
   -DBUILD_WITH_VIRTUALKEYBOARD=OFF 
   -DBUILD_WITH_FILEBROWSER=ON 
   -DGLEW_INCLUDE_DIR=${CMAKE_INSTALL_PREFIX}/include
   -DGLEW_SHARED_LIBRARY_DEBUG=${GLEW_SHARED_LIBRARY_DEBUG}
   -DGLEW_SHARED_LIBRARY_RELEASE=${GLEW_SHARED_LIBRARY_RELEASE}
   -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
)